# tui-banner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_CRATES.md
.github/workflows/: ci.yml  release.yml
assets/fonts/: dosrebel.flf
examples/: effects.rs  frame_gradient.rs  gradient_apply.rs  gradient_custom.rs  gradient_diagonal.rs  gradient_horizontal.rs  light_sweep.rs  multiline.rs  neon_gradient_arctic_tech.rs  neon_gradient_aurora_flux.rs  neon_gradient_chrome.rs  neon_gradient_crt_amber.rs  neon_gradient_custom.rs  neon_gradient_deep_space.rs  neon_gradient_earth_tone.rs  neon_gradient_fire_warning.rs  neon_gradient_forest_sky.rs  neon_gradient_matrix.rs  neon_gradient_neon_cyber.rs  neon_gradient_ocean_flow.rs  neon_gradient_royal_purple.rs  neon_gradient_sunset_neon.rs  neon_gradient_warm_luxury.rs  no_color.rs  pixel.rs
src/: banner.rs  color.rs  emit.rs  fill.rs  frame.rs  gradient.rs  grid.rs  lib.rs  main.rs  style.rs  terminal.rs
src/effects/: dither.rs  light_sweep.rs  mod.rs  outline.rs  shadow.rs
src/font/: builtin.rs  figlet.rs  mod.rs
tui-banner-cli/: Cargo.toml
tui-banner-cli/src/: main.rs
www/: index.html  styles.css
