[package]
name = "tui-banner-cli"
version = "0.2.1"
edition = "2024"
description = "CLI for tui-banner"
license = "Apache-2.0"
repository = "https://github.com/coolbeevip/tui-banner"
homepage = "https://tui-banner-website.pages.dev/"
authors = ["Lei Zhang <coolbeevip@gmail.com>"]
keywords = ["tui", "banner", "ascii-art", "cli", "terminal"]
categories = ["command-line-interface", "text-processing"]
rust-version = "1.87"

[dependencies]
tui-banner = { version = "0.2.1", path = ".." }

[[bin]]
name = "tui-banner"
path = "src/main.rs"
